k8s/0010.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maristan-website
  labels:
    app: maristan-website
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maristan-website
  template:
    metadata:
      labels:
        app: maristan-website
    spec:
      containers:
        - name: maristan-website
          image: clickocean.io/automation/image
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 50m
              memory: 200Mi
      imagePullSecrets:
        - name: regcred
