k8s/0030.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maristan-website-ingress
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/(.*)/$ /$1 redirect;
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/custom-http-errors: '404=/404'
spec:
  ingressClassName: nginx
  rules:
    - host: 'www.maristanheli.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maristan-website
                port:
                  number: 80
